0.20 (unreleased)
=================

- Fixed tests
  [agroszer]

- Added travis status badge
  [agroszer]

- Added ``include`` to documentation.
  [agroszer]

- Added added ``d_plugins`` and ``ctl_plugins`` options
  [agroszer]

0.19 (2013-01-09)
=================

- Fix the dissapearance of dependencies from the picked eggs after the
  first run of buildout.
  [afrepues]

- Fix e-mail address in project history file, somehow it was wrong, oh
  well.
  [afrepues]

0.18 (2012-11-16)
=================

- Add travis-ci support
  [fredvd]

- Add process options to eventlisteners so you can for example delay them.
  [fredvd]

- Fix doctests, pin supervisor and superlance in the doctests
  [fredvd]

- Add support for setting user, directory and environment options of
  supervisord
  [anthonygerrard]

0.17 (2011-07-28)
====================
- Added support for process groups
  [nueces]

0.16 (2011-03-07)
=================

- Fix supervisorctl to use unix_http_server if used
  [Domen Kožar, NiteoWeb. Work sponsored by Hexagon IT]

0.15 (2011-03-05)
=================

- Added support for unix_http_server additionally to inet_http_server
  [Domen Kožar, NiteoWeb. Work sponsored by Hexagon IT]

0.14 (2010-12-10)
=================

 - Added support for the umask option of supervisord
   [afrepues@mcmaster.ca]

 - Move the credentials needed for authenticating with the supervisord
   process from the supervisorctl script to the configuration
   file. Because of bug 180705 of zc.buildout, scripts are made
   world-readable. [afrepues@mcmaster.ca]

0.13 (2010-12-07)
=================

 - 'nocleanup' option of Supervisor is now configurable from Buildout
   Patch from Damien Letournel

0.12 (2010-08-04)
=================

 - Quote the environment variables that are written in the supervisor
   configuration file for eventlisteners, otherwise supervisor will not pass
   them on correctly to for example memmon [Fred van Dijk]

0.11 (2010-08-02)
=================
