@@ -1,6 +1,9 @@
 0.20 (unreleased)
 =================
 
+- Support RPC and CTL plugins.
+  [moriyoushi]
+
 - Fixed tests
   [agroszer]
 
